<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cunlan"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:text="登录"
        android:textColor="@color/baise"
        android:textSize="24sp" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/baise"
        android:orientation="vertical"
        android:padding="22dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/ic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp" >

            <ImageView
                android:id="@+id/activity_denglu_shoujihao_ig"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/denglu_et_zhanghao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/activity_denglu_shoujihao_ig"
                android:background="@color/baise"
                android:hint="@string/denglu_ed_zhanghao" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/activity_denglu_shoujihao_ig"
                android:layout_marginTop="10dp"
                android:background="@color/cunlan" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp" >

            <ImageView
                android:id="@+id/activity_denglu_mima_ig"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/denglu_ed_mima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/activity_denglu_mima_ig"
                android:background="@color/baise"
                android:hint="@string/denglu_ed_mima"
                android:password="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/activity_denglu_mima_ig"
                android:layout_marginTop="10dp"
                android:background="@color/cunlan" />
        </RelativeLayout>

        <Button
            android:id="@+id/denglu_bt_login"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/denglu_button"
            android:text="@string/denglu_denglu_bt"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/denglu_tv_zhuce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/denglu_zhuce" />

            <TextView
                android:id="@+id/denglu_tv_wangjimima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/denglu_wangjimima" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>