<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/main_dibu_menu_zhuye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_dibu_menu_zhuye_ig"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/main_home_yes" />

        <TextView
            android:id="@+id/main_dibu_menu_zhuye_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dibu_menu_zhuye"
            android:gravity="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_dibu_menu_qingdanguanli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_dibu_menu_qingdanguanli_ig"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/main_qingdanguanli_no" />

        <TextView
            android:id="@+id/main_dibu_menu_qingdanguanli_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dibu_menu_qingdanguanli"
            android:gravity="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_dibu_menu_jiaoliuquan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_dibu_menu_jiaoliuquan_ig"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/main_jiaoliuquan_no" />

        <TextView
            android:id="@+id/main_dibu_menu_jiaoliuquan_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_dibu_menu_jiaoliuquan"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_dibu_menu_gerenzhongxin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_dibu_menu_gerenzhongxin_ig"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/main_gerenzhongxin_no" />

        <TextView
            android:id="@+id/main_dibu_menu_gerenzhongxin_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_dibu_menu_gerenzhongixn"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>