<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cunlan"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:text="找回密码"
        android:textColor="@color/baise"
        android:textSize="24sp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baise"
        android:orientation="vertical"
        android:padding="22dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <ImageView
                android:id="@+id/find_password_phone_ig"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/find_password_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/find_password_phone_ig"
                android:background="@color/baise"
                android:hint="@string/zhuce_phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/find_password_phone_ig"
                android:layout_marginTop="10dp"
                android:background="@color/cunlan" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" >

            <ImageView
                android:id="@+id/activity_denglu_mima_ig"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/find_password_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/activity_denglu_mima_ig"
                android:background="@color/baise"
                android:hint="@string/denglu_ed_mima"
                android:password="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/activity_denglu_mima_ig"
                android:layout_marginTop="10dp"
                android:background="@color/cunlan" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" >

            <ImageView
                android:id="@+id/find_password_code_ig"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/yanzhenma" />

            <EditText
                android:id="@+id/find_password_code_et"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/find_password_code_ig"
                android:background="@color/baise"
                android:hint="@string/zhuce_yanzhengma" />

            <Button
                android:id="@+id/login_request_code_btn"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/find_password_code_et"
                android:background="@drawable/denglu_button"
                android:text="获取验证码"
                android:textColor="@color/baise"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@id/find_password_code_ig"
                android:layout_marginTop="6dp"
                android:layout_toLeftOf="@id/login_request_code_btn"
                android:background="@color/cunlan" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_commit_btn"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/denglu_button"
            android:text="重置密码"
            android:textColor="@color/baise" />
    </LinearLayout>

</LinearLayout>